[Filters Form] Fixed spacing, padding, alignment

--- a/app/assets/stylesheets/redesign/components/_filter-options-list.sass
+++ b/app/assets/stylesheets/redesign/components/_filter-options-list.sass
@@ -2,10 +2,10 @@
   display: block
   position: relative
   float: left
-  width: 19.2%
-  padding: .5em 1em
+  width: 19.6%
+  padding: .25em .5em .3em
   line-height: 1.25
-  margin: 0 1% 0 0
+  margin: 0 .5% 0 0
   background-color: color('grey')
   text-align: left
   color: white
@@ -18,7 +18,7 @@
     content: $fa-var-caret-down
     position: absolute
     top: 0
-    right: .75em
+    right: .25em
     bottom: 0
     margin: auto
     height: 1em
@@ -48,7 +48,7 @@
     &:after
       content: ''
       position: absolute
-      top: 2.3em
+      top: 2em
       left: 0
       right: 0
       margin: auto
@@ -80,7 +80,7 @@
 .filter-parent-options-list
   display: none
   position: absolute
-  top: 3.35em
+  top: 3em
   left: 0
   right: 0
   padding: 1em
