--- a/app/assets/stylesheets/redesign/components/_filters-form.sass
+++ b/app/assets/stylesheets/redesign/components/_filters-form.sass
@@ -1,6 +1,6 @@
 #filters-form
   display: block
-  padding: 2em 2em 1em
+  padding: 2em 7% 1em
   +font-smoothing(antialiased)
   +clearfix
 
