--- a/app/assets/stylesheets/redesign/components/_main-content-section.sass
+++ b/app/assets/stylesheets/redesign/components/_main-content-section.sass
@@ -1,5 +1,5 @@
 .main-content-section
-  padding: 1em 5% 4em 12%
+  padding: 1em 7% 4em 12%
   +clearfix
 
   &,
@@ -10,7 +10,7 @@
     padding: 1em 12% 4em
 
   &.main-content-section-wide
-    padding: 1em 5% 4em
+    padding: 1em 7% 4em
 
   &.main-content-section-full-width
     padding: 1em 2em 4em
